# mediacontrollercompact

./: CMakeLists.txt  README.md  install_local.sh
contents/ui/: ExpandedRepresentation.qml  main.qml
package/: metadata.desktop  metadata.json
package/contents/config/: config.qml
package/contents/ui/: ExpandedRepresentation.qml  configGeneral.qml  main.qml
plugin/: qmldir  volume_control.cpp  volume_control.h  volume_control_plugin.cpp  volume_control_plugin.h
